make var final